--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "home-capture-viewer",
+  "homepage": "http://nikdav.is/home-capture/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,7 +12,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -r git@github.com:nikdavis/nikdavis.github.io.git -e ./home-capture -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
